bizinikiwi/pezframe/support/test/tests/runtime_ui/invalid_pallet_index.stderr
error: expected integer literal
  --> tests/runtime_ui/invalid_pallet_index.rs:24:32
   |
24 |     #[runtime::pezpallet_index("0")]
   |                                ^^^
